--- a/TFServing_ResNet.ipynb
+++ b/TFServing_ResNet.ipynb
@@ -6,7 +6,7 @@
       "name": "TFServing ResNet.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDR+jkJff1hlb2+u6MA7jn",
+      "authorship_tag": "ABX9TyP5zoZY2HxFvSa/pT8e2aA+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "IMAGE_URL = \"https://www.metoffice.gov.uk/binaries/content/gallery/metofficegovuk/hero-images/advice/maps-satellite-images/satellite-image-of-globe.jpg\" #@param {type:\"string\"}\n",
         "# The server URL specifies the endpoint of your server running the ResNet\n",
         "# model with the name \"resnet\" and using the predict interface.\n",
-        "SERVER_URL = 'http://34.123.125.42:8501/v1/models/resnet:predict' #@param {type:\"string\"}\n",
+        "SERVER_URL = 'http://\\u003CLoadbalancer IP>:8501/v1/models/resnet:predict' #@param {type:\"string\"}\n",
         "\n",
         "#IMAGE_URL = 'https://www.thesprucepets.com/thmb/lIRYTymFwujCVbg4UbxAOyWwQ_s=/5064x3315/filters:fill(auto,1)/canaan-dog--lying-down-110056364-5c44fecac9e77c0001a2bf1c.jpg'\n",
         "\n",
@@ -148,7 +148,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!curl -d \"@request.json\" -X POST 'http://34.123.125.42:8501/v1/models/resnet_fnp:predict'"
+        "!curl -d \"@request.json\" -X POST SERVER_URL"
       ],
       "metadata": {
         "id": "1Cy75BxYnzPa"
